--- a/jvmlearn/build.gradle
+++ b/jvmlearn/build.gradle
@@ -15,4 +15,9 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    //json
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.31'
+    // https://mvnrepository.com/artifact/org.json/json
+    compile group: 'org.json', name: 'json', version: '20180813'
+
 }
